--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: ${db.ddl:create-drop}
-    show-sql: false
+    show-sql: true
 
   mvc:
     throw-exception-if-no-handler-found: true
