--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
       minimum-idle: 1
   jpa:
     hibernate:
-      ddl-auto: ${db.ddl:update}
+      ddl-auto: ${db.ddl:create-drop}
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
