--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,33 +1,24 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${db.url:jdbc:mysql://localhost:3306/legacy_board}
-    username: ${db.username:root}
-    password: ${db.password:1234}
+    url: ${db_url:jdbc:mysql://localhost:3306/legacy_board}
+    username: ${db_username:root}
+    password: ${db_password:1234}
     hikari:
       maximum-pool-size: 4
       minimum-idle: 1
   jpa:
     hibernate:
-      ddl-auto: ${db.ddl:create-drop}
+      ddl-auto: ${db_ddl:create-drop} # validate
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-      jakarta:
-        persistence:
-          validation:
-            mode: none
-    show-sql: false
-
 
   mvc:
     throw-exception-if-no-handler-found: true
     view:
       prefix: /WEB-INF/jsp/
       suffix: .jsp
-  h2:
-    console:
-      enabled: true
 
   web.resources.add-mappings: false # https://www.leeby.one/posts/spring.web.resources.add-mappings-%EC%98%B5%EC%85%98/
 
@@ -38,15 +29,8 @@ server:
     context-path: /
   port: 8080
 
-
 ---
 
 spring:
   profiles:
-    active: prod
-
----
-
-spring:
-  profiles:
-    active: local
+    active: ${profile:local}
