--- a/appspec.yml
+++ b/appspec.yml
@@ -3,11 +3,11 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ubuntu/build
+    destination: /home/ubuntu/github_action
     overwrite: yes
 
 permissions:
-  - object: /home/ubuntu
+  - object: /
     pattern: '**'
     owner: ubuntu
     group: ubuntu
