--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,3 +6,4 @@ spring:
     show-sql: true
 
 uploadPath: /users/zerovirus/desktop/code/legacy-board/src/main/resources/static/img/
+imgPath: /users/zerovirus/desktop/code/legacy-board/src/main/resources/static/img/
