--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,4 +11,6 @@ spring:
 
   profiles:
     include: local
-#uploadPath: /users/zerovirus/desktop/code/legacy-board/src/main/resources/static/img/
+
+corsUrl: ${cors:http://localhost:3000}
+uploadPath: /users/zerovirus/desktop/code/legacy-board/src/main/resources/static/img/
