s3 이미지 업로드

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,2 +1,14 @@
 uploadPath: notyet
 imgPath: notyet
+
+cloud:
+  aws:
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
+    credentials:
+      access-key: ${s3_access_key}
+      secret-key: ${s3_secret_key}
+    s3:
+      bucket: ${s3_bucket}
