--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,11 @@ spring:
 
   web.resources.add-mappings: false # https://www.leeby.one/posts/spring.web.resources.add-mappings-%EC%98%B5%EC%85%98/
 
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
 server:
   servlet:
     encoding:
@@ -29,11 +34,8 @@ server:
     context-path: /
   port: 8080
 
-corsUrl: ${cors:http://localhost:3000}
-
 ---
 
 spring:
   profiles:
     active: ${profile:local}
-
