--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   S3_BUCKET_NAME: s3-kimzerovirus
-  CODE_DEPLOY_APPLICATION_NAME: CODE-DEPLOY-KIMZEROVIRUS
+  CODE_DEPLOY_APPLICATION_NAME: CODE-DEPLOY
   CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: CODE-DEPLOY-GROUP
 
 jobs:
